Fix problems with accordion
Add green scrollbar;
Fix layout for accordion_header element;
Change arrow on expanding content;
Style text of content;
Set max-height to fix value.

--- a/task_05/sass/components/_sections.scss
+++ b/task_05/sass/components/_sections.scss
@@ -601,11 +601,10 @@
 
 	&__header {
 		display: flex;
-		justify-content: space-between;
 		align-items: center;
 		width: 100%;
 		background-color: white;
-		color: #666;
+		color: #666666;
 		cursor: pointer;
 		padding: 1rem;
 		text-align: left;
@@ -620,11 +619,13 @@
 		font-size: 1.4rem;
 		text-transform: uppercase;
 		font-family: 'Montserrat', sans-serif;
+		flex: 1;
 	}
 
 	&__icon {
 		font-size: 3rem;
 		color: #95e1d3;
+		margin-right: 1rem;
 
 		&--arrow {
 			font-size: 3rem;
@@ -638,16 +639,31 @@
 		max-height: 0;
 		overflow: scroll;
 		padding-left: 1rem;
-		transition: max-height 0.3s ease-out;
-		margin-bottom: 1rem;
+		transition: all 0.4s ease-in-out;
 		font-style: italic;
 		font-weight: 300;
 		border: 1px solid #ddd;
 		border-top-style: none;
 
-		p {
-			padding: 2rem;
+		&:not(:last-child) {
+			margin-bottom: 1rem;
 		}
+
+		&::-webkit-scrollbar {
+			width: .5rem;
+
+			&-thumb {
+			 background-color: #95e1d3;
+			 border-radius: 3rem;
+			}
+		}
+	}
+
+	&__text {
+		display: block;
+		padding: 2rem;
+		line-height: 1.7;
+		margin-right: 2rem;
 	}
 }
 
